--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
+    "@openai/agents": "^0.0.9",
+    "@openai/agents-extensions": "^0.0.9",
     "@vectorize-io/vectorize-client": "^0.2.1",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
